# Data-Structures

./: .gitignore  README.md
Containers/: .clang-format  CMakeLists.txt  forward_list.c  forward_list.h  main.c  map.c  queue.c  queue.h  stack.c  stack.h
Containers/docs/: README.md  forward_iterator.md  forward_list.md  queue.md  stack.md
Containers/docs/forward_list/: destructor.md  factory.md
Containers/include/: binary_tree.h  forward_list.h  map.h  queue.h
LinkedList/: CMakeLists.txt  LinkedList.c  LinkedList.h  main.c
TP1/: .clang-format  CMakeLists.txt  Exercise1.c  Exercise1.h  Exercise2.c  Exercise2.h  README.md  TP1.c  exercise_1.cpp  exercise_2.cpp  exercise_2.hpp  gen-zip.sh
TP1/docs/: Exercice 1.md  Exercice 2.md
TP2/: CMakeLists.txt  Exercise_1.c  Exercise_1.h  Exercise_2.c  README.md  forward_list.c  forward_list.h  stack.c
TP2/include/: Exercise_1.h  Exercise_2.h
TP3/: CMakeLists.txt  Exercise_1.c  Exercise_1.h  Exercise_2.c  Exercise_2.h  README.md  TP3.passagers.txt
TP3/UML diagrams/: find.puml  forward_list_t.puml  insert.puml  map_t.puml  passenger_t.puml  store_passenger.puml
TP3/include/: ex1.h  ex2.h  forward_list.h  map.h
TP3/src/: ex1.c  ex2.c  forward_list.c  main1.c  main2.c  map.c
TP4/: CMakeLists.txt  README.md  liaisons.txt
TP4/UML Diagrams/: airport.puml
TP4/include/: csv.h
TP4/src/: main.c  queue.c  stack.c
TP5/: CMakeLists.txt  README.md  data.csv  main.c  tp5.h
